Fixing highlight overflows.

--- a/Source/TreasureGuide.Web/src/css/gcr.scss
+++ b/Source/TreasureGuide.Web/src/css/gcr.scss
@@ -48,35 +48,38 @@
             @extend ._dangerLight;
         }
     }
+
     // Highlights
-    overflow: hidden;
-    
-    tr:nth-child(even) {
-        background-color: rgba(128, 128, 128, 0.2);
-    }
+    table {
+        overflow: hidden;
 
-    tr:hover {
-        background-color: #ffd800;
-    }
+        tr:nth-child(even) {
+            background-color: rgba(128, 128, 128, 0.2);
+        }
 
-    td, th {
-        position: relative;
-    }
+        tr:hover {
+            background-color: #ffd800;
+        }
 
-    td:hover,
-    th:hover {
-        overflow: visible;
-    }
+        td, th {
+            position: relative;
+        }
 
-    td:hover::after,
-    th:hover::after {
-        background-color: #ffd800;
-        content: "";
-        position: absolute;
-        left: 0;
-        top: -5000px;
-        height: 10000px;
-        width: 100%;
-        z-index: -1;
+        td:hover,
+        th:hover {
+            overflow: visible;
+        }
+
+        td:hover::after,
+        th:hover::after {
+            background-color: #ffd800;
+            content: "";
+            position: absolute;
+            left: 0;
+            top: -5000px;
+            height: 10000px;
+            width: 100%;
+            z-index: -1;
+        }
     }
 }
